--- a/Prak 02/Prak_02_Deret-Waktu.rmd
+++ b/Prak 02/Prak_02_Deret-Waktu.rmd
@@ -44,7 +44,7 @@ install_load <- function (package1, ...)  {
 
 install_load("knitr","ggplot2","viridis","dplyr","DT","stringr","scales","tidyr",
              "waffle","ggtext","lubridate","reshape2","calendR","plotly","ggforce"
-             ,"ggalluvial","networkD3")
+             ,"ggalluvial","networkD3","ggbump")
 
 # Set wd 
 opts_knit$set(root.dir = normalizePath("./"))
@@ -177,7 +177,39 @@ Menunjukkan perubahan data antara dua titik waktu.
 ![](images/clipboard-1967735244.png){width="245"}
 
 ```{r fig.height=3.5, fig.width=10, dpi=300}
+# Buat Data Simulasi
+slope_data <- data.frame(
+  State = c("Montana", "Hawaii", "Idaho", "Michigan", "North Carolina", "Connecticut"),
+  Unemployment_2000 = c(5.1, 4.7, 4.6, 3.3, 3.3, 2.8),  # Data tahun 2000
+  Unemployment_2018 = c(4.5, 4.2, 3.8, 4.2, 3.0, 2.3)   # Data tahun 2018
+) %>%
+  tidyr::pivot_longer(cols = starts_with("Unemployment"), 
+                      names_to = "Year", values_to = "Rate") %>%
+  mutate(Year = recode(Year, 
+                       "Unemployment_2000" = "January 2000", 
+                       "Unemployment_2018" = "January 2018"))
 
+# Plot Slope Chart
+ggplot(slope_data, aes(x = Year, y = Rate, group = State, color = State)) +
+  geom_line(size = 1.2) +  
+  geom_point(size = 3) +  
+  geom_text(data = slope_data %>% filter(Year == "January 2000"), 
+            aes(label = paste0(State, " ", Rate, "%")), 
+            hjust = 1.1, size = 4) +  
+  geom_text(data = slope_data %>% filter(Year == "January 2018"), 
+            aes(label = paste0(Rate, "%")), 
+            hjust = -0.1, size = 4) +  
+  scale_x_discrete(expand = expansion(mult = c(0.2, 0.2))) +  
+  scale_y_continuous(limits = c(2, 6)) +
+  labs(title = "Biggest Changes in the Unemployment Rate",
+       subtitle = "Between January 2000 and January 2018",
+       x = "", y = "Unemployment Rate (%)") +
+  theme_minimal() +
+  theme(legend.position = "none",
+        axis.text.x = element_text(size = 12, face = "bold"),
+        axis.text.y = element_text(size = 10),
+        plot.title = element_text(size = 14, face = "bold"),
+        plot.subtitle = element_text(size = 12))
 ```
 
 ## Sparklines {#sparklines}
@@ -186,10 +218,6 @@ Garis kecil yang menunjukkan tren singkat dalam dataset.
 
 ![](images/clipboard-2076837143.png){width="207"}
 
-```{r fig.height=3.5, fig.width=10, dpi=300}
-
-```
-
 ## Bump Chart {#bump-chart}
 
 Menampilkan perubahan peringkat suatu kategori seiring waktu.
@@ -197,7 +225,33 @@ Menampilkan perubahan peringkat suatu kategori seiring waktu.
 ![](images/clipboard-808845619.png){width="498"}
 
 ```{r fig.height=3.5, fig.width=10, dpi=300}
+# Buat Data Simulasi
+bump_data <- data.frame(
+  Year = rep(seq(2000, 2015, 5), each = 8),  # Tahun dalam interval 5 tahun
+  Country = rep(c("United States", "Switzerland", "Germany", "France", "Sweden",
+                  "Japan", "Netherlands", "Canada"), times = 4),
+  Rank = c(1, 2, 3, 4, 5, 6, 7, 8,
+           1, 2, 4, 3, 6, 5, 8, 7,
+           1, 2, 3, 5, 4, 7, 6, 8,
+           1, 2, 3, 4, 5, 6, 7, 8)  # Peringkat tiap negara
+)
 
+# Plot Bump Chart
+ggplot(bump_data, aes(x = Year, y = Rank, group = Country, color = Country)) +
+  geom_bump(size = 1.5) +  # Garis smooth bump chart
+  geom_point(size = 3) +  # Titik pada setiap peringkat
+  geom_text(aes(label = Country), data = bump_data %>% filter(Year == max(Year)), 
+            hjust = -0.2, size = 4, fontface = "bold") +  # Label negara di akhir
+  scale_y_reverse(breaks = 1:8) +  # Mengurutkan peringkat dari atas ke bawah
+  scale_x_continuous(breaks = seq(2000, 2015, 5)) +
+  labs(title = "Ranks of Health Care Spending Among Major Countries",
+       x = "Year", y = "Rank") +
+  theme_minimal() +
+  theme(legend.position = "none", 
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank(),
+        axis.text.x = element_text(size = 10),
+        axis.text.y = element_text(size = 10))
 ```
 
 ## Cycle Chart {#cycle-chart}
@@ -206,10 +260,6 @@ Menampilkan perubahan peringkat suatu kategori seiring waktu.
 
 ![](images/clipboard-3777843107.png){width="249"}
 
-```{r fig.height=3.5, fig.width=10, dpi=300}
-
-```
-
 ## Area Chart {#area-chart}
 
 **Area Chart** adalah varian dari **line chart** di mana **area di bawah garis diisi dengan warna** untuk memberikan bobot visual yang lebih jelas pada data. Grafik ini digunakan untuk **menunjukkan tren perubahan nilai numerik dari waktu ke waktu**.
@@ -217,7 +267,18 @@ Menampilkan perubahan peringkat suatu kategori seiring waktu.
 ![](images/clipboard-2125368945.png){width="213"}
 
 ```{r fig.height=3.5, fig.width=10, dpi=300}
+# Buat Data Simulasi
+set.seed(123)
+data <- data.frame(
+  x = seq(0, 10, by = 1),
+  y = cumsum(runif(11, min = -50, max = 100)) + 200  # Nilai kumulatif agar ada pola naik-turun
+)
 
+# Plot Area Chart
+ggplot(data, aes(x = x, y = y)) +
+  geom_area(fill = "red", alpha = 0.8) +  # Area dengan warna merah
+  theme_minimal() +
+  labs(title = "Area Chart", x = "", y = "")
 ```
 
 ## Stacked Area Chart {#stacked-area-chart}
@@ -226,11 +287,53 @@ Menampilkan perubahan peringkat suatu kategori seiring waktu.
 
 **Stacked Area Chart** adalah varian dari **area chart** yang digunakan untuk **menampilkan beberapa seri data secara simultan**, di mana setiap area saling ditumpuk sehingga nilai totalnya dapat terlihat dengan jelas. Grafik ini sering digunakan untuk **menunjukkan perubahan distribusi data seiring waktu**.
 
+```{r fig.height=3.5, fig.width=10, dpi=300}
+# Buat Data Simulasi
+set.seed(123)
+data <- data.frame(
+  x = rep(seq(0, 10, by = 1), 3),   # Sumbu X yang sama untuk semua kategori
+  y = cumsum(runif(11, min = 50, max = 150)),  # Seri 1
+  y2 = cumsum(runif(11, min = 40, max = 120)), # Seri 2
+  y3 = cumsum(runif(11, min = 30, max = 90))   # Seri 3
+)
+
+# Ubah Data ke Format Long
+data_long <- data %>%
+  pivot_longer(cols = c(y, y2, y3), names_to = "Category", values_to = "Value")
+
+# Plot Stacked Area Chart
+ggplot(data_long, aes(x = x, y = Value, fill = Category)) +
+  geom_area(alpha = 0.8) +  # Area chart dengan transparansi
+  scale_fill_manual(values = c("#1C1F38", "#E63946", "#F76C5E")) +  # Warna seperti di gambar
+  theme_minimal() +
+  labs(title = "Stacked Area Chart", x = "", y = "")
+```
+
 ## Streamgraph {#streamgraph}
 
 Menampilkan perubahan dalam data kategorikal dengan bentuk yang mengalir.
 
 ![](images/clipboard-1563743455.png){width="209"}
+
+```{r fig.height=3.5, fig.width=10, dpi=300}
+# Buat Data Simulasi
+set.seed(123)
+data <- data.frame(
+  Month = rep(c("JAN", "FE", "MA", "AP"), each = 100),
+  Value = c(rnorm(100, mean = 50, sd = 15),
+            rnorm(100, mean = 55, sd = 20),
+            rnorm(100, mean = 45, sd = 18),
+            rnorm(100, mean = 60, sd = 22)),
+  Category = rep(c("A", "B", "C"), times = c(130, 130, 140))
+)
+
+# Plot Ridgeline Chart (Joyplot)
+ggplot(data, aes(x = Value, y = Month, fill = Category)) +
+  geom_density_ridges(scale = 2, alpha = 0.8) +  # Joyplot dengan smoothing
+  scale_fill_manual(values = c("#1C1F38", "#E63946", "#F76C5E")) +  # Warna sesuai contoh
+  theme_minimal() +
+  labs(title = "Ridgeline Plot (Joyplot)", x = "", y = "")
+```
 
 ## Horizon Chart {#horizon-chart}
 
@@ -238,11 +341,19 @@ Menampilkan perubahan dalam data kategorikal dengan bentuk yang mengalir.
 
 ![](images/clipboard-1440192241.png){width="284"}
 
+```{r fig.height=3.5, fig.width=10, dpi=300}
+
+```
+
 ## Gantt Chart {#gantt-chart}
 
 **Gantt Chart** adalah jenis grafik yang digunakan untuk **menampilkan jadwal, proses, atau durasi tugas** dengan **menggunakan batang horizontal**. Grafik ini sering digunakan dalam **manajemen proyek, shift kerja, dan pelacakan jadwal produksi**.
 
 ![](images/clipboard-1815658534.png){width="294"}
+
+```{r fig.height=3.5, fig.width=10, dpi=300}
+
+```
 
 ## Flow Charts and Timelines {#flow-chart}
 
@@ -256,130 +367,12 @@ Flow Charts dan Timelines adalah dua jenis visualisasi yang digunakan untuk **me
 
 ![](images/clipboard-3027502065.png){width="211"} ![](images/clipboard-131536693.png){width="419"}
 
+```{r fig.height=3.5, fig.width=10, dpi=300}
+
+```
+
 ## Conclusion
 
 Ringkasan konsep visualisasi deret waktu.
 
 ------------------------------------------------------------------------
-
-# **Distribusi** {#distribusi}
-
-## Histogram {#histogram}
-
-Visualisasi distribusi data berbasis frekuensi dalam bentuk batang.
-
-![](images/clipboard-1238374112.png){width="202"}
-
-## Pyramid Chart {#pyramid-chart}
-
-Digunakan untuk membandingkan distribusi kategori dua arah (misalnya populasi pria vs wanita).
-
-![](images/clipboard-4158192479.png){width="198"}
-
-## **Visualizing Statistical Uncertainty with Charts** {#statistical-uncertainty}
-
-Metode visualisasi ketidakpastian statistik dalam data.
-
-### Error Bars
-
-![](images/clipboard-955379841.png){width="172"}
-
-### Confidence Interval
-
-![](images/clipboard-1134882823.png){width="229"}
-
-### Gradient Chart
-
-![](images/clipboard-1119979853.png){width="293"}
-
-### Fan Charts
-
-![](images/clipboard-673330419.png){width="254" height="201"}
-
-## Box-and-Whisker Plot {#boxplot}
-
-Menampilkan lima ringkasan data: minimum, Q1, median, Q3, dan maksimum.
-
-![](images/clipboard-3133313176.png){width="222"}
-
-## Candlestick Chart {#candlestick-chart}
-
-Digunakan dalam analisis keuangan untuk menunjukkan harga tertinggi, terendah, pembukaan, dan penutupan.
-
-![](images/clipboard-52418158.png){width="318"}
-
-## Violin Chart {#violin-chart}
-
-Kombinasi antara boxplot dan density plot untuk memahami distribusi data.
-
-![](images/clipboard-3558018633.png){width="194" height="194"}
-
-## Ridgeline Plot {#ridgeline-plot}
-
-Menunjukkan distribusi data yang saling tumpang tindih dalam satu grafik.
-
-![](images/clipboard-3261482838.png){width="283"}
-
-## **Showing the Data** {#uncertainty}
-
-### Strip Plot
-
-![](images/clipboard-2235031614.png){width="177"}
-
-### Beeswarm Plot
-
-![](images/clipboard-1465558755.png){width="177"} ![](images/clipboard-812578471.png){width="227"}
-
-### Wilkinson Dot Plots and Wheat Plot
-
-![](images/clipboard-2521164228.png){width="161" height="89"} ![](images/clipboard-2082311084.png){width="315"}
-
-### Raincloud Plot
-
-![](images/clipboard-67481014.png){width="327"}
-
-## Stem-and-Leaf Plot {#stem-leaf}
-
-Digunakan untuk menampilkan distribusi angka dengan tetap mempertahankan nilai aslinya.
-
-![](images/clipboard-1702212809.png)
-
-## Conclusion
-
-Ringkasan konsep visualisasi distribusi data.
-
-------------------------------------------------------------------------
-
-# **Geospasial** {#geospasial}
-
-## Choropleth Map {#choropleth-map}
-
-Peta yang menggunakan warna untuk mewakili nilai numerik dalam wilayah geografis.
-
-![](images/clipboard-2376210583.png){width="313"}
-
-## Cartogram {#cartogram}
-
-Peta di mana ukuran geografis diubah berdasarkan nilai data.
-
-![](images/clipboard-3681442694.png){width="237" height="165"} ![](images/clipboard-4115455026.png){width="392"}
-
-## Proportional Symbol and Dot Density Maps {#dot-density}
-
--   **Proportional symbol map**: menggunakan simbol dengan ukuran berbeda untuk mewakili nilai data.
-
-    ![](images/clipboard-3951358214.png){width="300"}
-
--   **Dot density map**: menyebarkan titik dalam area geografis untuk menunjukkan kepadatan.
-
-    ![](images/clipboard-408315568.png){width="329"}
-
-## Flow Map {#flow-map}
-
-Menunjukkan pergerakan data (misalnya migrasi populasi, aliran lalu lintas) dalam peta.
-
-![](images/clipboard-3581638534.png){width="507"}
-
-## Conclusion
-
-Ringkasan konsep visualisasi geospasial.
